# dynamic-form

./: .editorconfig  .gitignore  AGENTS.md  DEPLOY.md  GEMINI.md  INVESTIGATION_JUNE_13_BREAKAGE.md  README.md  certificate.sh  cleanup.sh  deploy.sh  docker-compose.yaml  pom.xml  setup.sh
.certificates/: dynamic-form-localhost.arn  dynamic-form-localhost.crt  dynamic-form-localhost.key  openssl.conf
.claude/: CLAUDE.md  claude.json  settings.json  settings.local.json
.claude/commands/: test.md
.github/: copilot-instructions.md
auth-server/: AGENT_CONTEXT.md  pom.xml
backend/: AGENT_CONTEXT.md  pom.xml
debt-bot/: .gitignore  AiClient.py  FindingsBackendTests.md  GitClient.py  Orchestrator.py  QUICKSTART.md  README.md  Status.md  Tasks.md  TestRunner.py  check-format.ps1  check-format.sh  pyproject.toml  requirements.txt
debt-bot/prompts/: refactor.txt  test.txt
docs/: AWSDeployPlan.md  ClaudeRecommendations.md  CodeReviewFindings.md  ComplianceAnalysis.md  DependencyUpgradePlan.md  DynamicFormImplementationPlan.md  PLAN.md  RequirementSpecification.md  RequirementsSpecification.md  ReviewSkill.md  RoadMap.md  SpringBoot4UpgradePlan.md  TechnicalSpecification.md  TerraformReviewFindings.md  UseCases.md  ValidationErrorPlan.md  aws-architecture.puml  deploy-policy.json
frontend/: AGENT_CONTEXT.md  eslint.config.js  index.html  package-lock.json  package.json  pom.xml  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  (+2 more)
terraform/: alb.tf  cognito-users.tf  ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  rds.tf  terraform.tfvars.example  variables.tf
(+130 files in other folders)
